--- a/css/style.css
+++ b/css/style.css
@@ -389,22 +389,7 @@ body {
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  font-family: 'Montserrat', sans-serif;
-  background-color: #000;
-  color: #eee;
-}
-.container {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+*
 .container p {
   font-size: 3rem;
   padding: 0.5rem;
