--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,14 @@
   list-style: none;
   text-decoration: none;
 }
-
+* {
+  box-sizing: border-box;
+   user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select:none;
+  -o-user-select:none; 
+  }
 
 
 
